--- a/public/networks/index.html
+++ b/public/networks/index.html
@@ -29,13 +29,13 @@
 <body>
   <header class="px-6 pt-8 pb-6 md:px-10">
     <div class="max-w-5xl mx-auto flex items-center justify-between">
-      <div class="flex items-center gap-3">
-        <div class="w-10 h-10 rounded-xl bg-gradient-to-br from-blue-500 to-purple-600"></div>
+      <a href="https://vertikalapp.com" class="flex items-center gap-3">
+        <img src="../assets/Vertikal_Logo_Master.png" alt="VERTIKAL" style="height: 40px; width: auto;">
         <div>
           <div class="text-[10px] tracking-[0.25em] text-blue-300 font-extrabold">FOUNDING 50</div>
           <div class="text-sm font-black">NETWORKS</div>
         </div>
-      </div>
+      </a>
       <div class="flex items-center gap-4 text-xs">
         <a href="https://creators.vertikalapp.com" class="text-white/60 hover:text-white">Creators</a>
         <a href="https://vertikalapp.com" class="text-white/60 hover:text-white">Home</a>
