--- a/public/creators/index.html
+++ b/public/creators/index.html
@@ -6,7 +6,7 @@
     <title>Join the Founding 50 | VERTIKAL</title>
     <meta name="description" content="Claim your spot as a Founding Creator on VERTIKAL - the platform built for directors, not influencers.">
     
-    <!-- Supabase JS Client -->
+    <!-- Supabase JS Client (Only for login - signup uses Edge Function) -->
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
     
     <!-- Google Fonts -->
@@ -788,7 +788,7 @@
                         <div class="referral-code" id="referralCode">LOADING...</div>
                         <p class="referral-note">Share this code with 4 creators to unlock all Founding 50 benefits.</p>
                     </div>
-                    <button class="submit-btn" onclick="window.location.href='/dashboard'">
+                    <button class="submit-btn" onclick="window.location.href='https://creators.vertikalapp.com/dashboard'">
                         ENTER STUDIO
                     </button>
                     <button class="vanguard-btn" onclick="copyReferralLink()">
@@ -913,11 +913,9 @@
 
     <script>
         // ============================================
-        // SUPABASE CONFIGURATION
+        // EDGE FUNCTION ENDPOINT (Server-side signup)
         // ============================================
-        const SUPABASE_URL = 'https://vuwawtzhhcarckybdgbd.supabase.co';
-        const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZ1d2F3dHpoaGNhcmNreWJkZ2JkIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjU1OTU5NDQsImV4cCI6MjA4MTE3MTk0NH0.FQS6GYae1iw-rbYgo4P5BCuG8dkY_XZpbo0XIcxk62g';
-        const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+        const EDGE_FUNCTION_URL = 'https://vuwawtzhhcarckybdgbd.supabase.co/functions/v1/signup';
 
         // Check for referral code in URL
         const urlParams = new URLSearchParams(window.location.search);
@@ -977,19 +975,12 @@
         }
 
         // ============================================
-        // GENERATE REFERRAL CODE
+        // GENERATE REFERRAL CODE (Removed - server-side)
         // ============================================
-        function generateReferralCode(username) {
-            const chars = 'ABCDEFGHJKLMNPQRSTUVWXYZ23456789';
-            let code = username.substring(0, 3).toUpperCase();
-            for (let i = 0; i < 4; i++) {
-                code += chars.charAt(Math.floor(Math.random() * chars.length));
-            }
-            return code;
-        }
+        // Referral codes are now generated server-side for uniqueness
 
         // ============================================
-        // SIGNUP HANDLER
+        // SIGNUP HANDLER (Server-side via Edge Function)
         // ============================================
         async function handleSignup(event) {
             event.preventDefault();
@@ -999,12 +990,14 @@
             const originalText = btn.textContent;
 
             const formData = new FormData(form);
-            const email = formData.get('email');
-            const password = formData.get('password');
-            const firstName = formData.get('firstName');
-            const lastName = formData.get('lastName');
-            const username = formData.get('username').replace('@', '');
-            const referralCode = formData.get('referralCode');
+            const data = {
+                email: formData.get('email'),
+                password: formData.get('password'),
+                firstName: formData.get('firstName'),
+                lastName: formData.get('lastName'),
+                username: formData.get('username').replace('@', ''),
+                referralCode: formData.get('referralCode') || null
+            };
 
             if (!formData.get('terms')) {
                 showToast('Please accept the Terms of Service', 'error');
@@ -1015,37 +1008,25 @@
             btn.innerHTML = '<span class="loading"><span class="spinner"></span>CREATING ACCOUNT...</span>';
 
             try {
-                const myReferralCode = generateReferralCode(username);
-
-                const { data, error } = await supabase.auth.signUp({
-                    email: email,
-                    password: password,
-                    options: {
-                        data: {
-                            first_name: firstName,
-                            last_name: lastName,
-                            username: username,
-                            full_name: `${firstName} ${lastName}`,
-                            role: 'creator',
-                            user_type: 'creator',
-                            is_founding_50: true,
-                            referral_code: myReferralCode,
-                            referred_by: referralCode || null,
-                            referral_count: 0
-                        },
-                        emailRedirectTo: `${window.location.origin}/dashboard`
-                    }
+                const res = await fetch(EDGE_FUNCTION_URL, {
+                    method: 'POST',
+                    headers: { 'Content-Type': 'application/json' },
+                    body: JSON.stringify(data)
                 });
 
-                if (error) throw error;
+                const json = await res.json();
+
+                if (!res.ok) {
+                    throw new Error(json.error || 'Signup failed');
+                }
 
                 // Show success screen with referral code
                 document.getElementById('authForms').style.display = 'none';
                 document.getElementById('successScreen').classList.add('active');
-                document.getElementById('referralCode').textContent = myReferralCode;
+                document.getElementById('referralCode').textContent = json.referral;
 
                 // Store referral code for copy function
-                window.userReferralCode = myReferralCode;
+                window.userReferralCode = json.referral;
 
                 showToast('Account created! Check your email to verify.', 'success');
 
@@ -1058,8 +1039,14 @@
         }
 
         // ============================================
-        // LOGIN HANDLER
+        // LOGIN HANDLER (Note: Login still uses Supabase client)
         // ============================================
+        // Login requires Supabase client - keeping for now
+        // TODO: Move to Edge Function for consistency
+        const SUPABASE_URL = 'https://vuwawtzhhcarckybdgbd.supabase.co';
+        const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InZ1d2F3dHpoaGNhcmNreWJkZ2JkIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NjU1OTU5NDQsImV4cCI6MjA4MTE3MTk0NH0.FQS6GYae1iw-rbYgo4P5BCuG8dkY_XZpbo0XIcxk62g';
+        const supabase = window.supabase.createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+
         async function handleLogin(event) {
             event.preventDefault();
 
@@ -1083,7 +1070,7 @@
                 if (error) throw error;
 
                 showToast('Welcome back, Director!', 'success');
-                setTimeout(() => { window.location.href = '/dashboard'; }, 1000);
+                setTimeout(() => { window.location.href = 'https://creators.vertikalapp.com/dashboard'; }, 1000);
 
             } catch (error) {
                 console.error('Login error:', error);
@@ -1153,21 +1140,9 @@
         }
 
         // ============================================
-        // AUTH STATE CHECK
+        // AUTH STATE CHECK (Removed - handled server-side)
         // ============================================
-        async function checkAuth() {
-            const { data: { session } } = await supabase.auth.getSession();
-            if (session) {
-                window.location.href = '/dashboard';
-            }
-        }
-        checkAuth();
-
-        supabase.auth.onAuthStateChange((event, session) => {
-            if (event === 'SIGNED_IN' && session) {
-                window.location.href = '/dashboard';
-            }
-        });
+        // Auth state is now managed server-side via Edge Functions
     </script>
 </body>
 </html>
