--- a/public/investors/index.html
+++ b/public/investors/index.html
@@ -911,5 +911,90 @@
             }
         }
     </script>
+
+    <!-- VERTIKAL AUTH SIMULATION -->
+    <script>
+        document.addEventListener("DOMContentLoaded", () => {
+            
+            // Select all forms on the page
+            const forms = document.querySelectorAll("form");
+
+            forms.forEach(form => {
+                form.addEventListener("submit", (e) => {
+                    e.preventDefault(); // Stop page reload
+
+                    // 1. Get the Button
+                    const btn = form.querySelector("button[type='submit']");
+                    const originalText = btn.innerText;
+
+                    // 2. Change Button to "Loading" State
+                    btn.disabled = true;
+                    btn.innerText = "VERIFYING CREDENTIALS...";
+                    btn.style.opacity = "0.7";
+                    btn.style.cursor = "wait";
+
+                    // 3. Simulate Server Delay (2 Seconds)
+                    setTimeout(() => {
+                        
+                        // 4. Success State
+                        btn.style.backgroundColor = "#22c55e"; // Success Green
+                        btn.style.color = "black";
+                        btn.innerText = "ACCESS GRANTED";
+
+                        // 5. Show a "Toast" Notification
+                        showToast("Application Submitted Successfully.");
+
+                        // 6. Reset Form after 2 seconds
+                        setTimeout(() => {
+                            form.reset();
+                            btn.disabled = false;
+                            btn.innerText = originalText;
+                            btn.style.backgroundColor = ""; // Revert to CSS default
+                            btn.style.color = "";
+                            btn.style.opacity = "1";
+                            btn.style.cursor = "pointer";
+                        }, 2000);
+
+                    }, 2000);
+                });
+            });
+        });
+
+        // Helper Function: Create a temporary popup
+        function showToast(message) {
+            const toast = document.createElement("div");
+            toast.innerText = message;
+            toast.style.position = "fixed";
+            toast.style.bottom = "20px";
+            toast.style.right = "20px";
+            toast.style.background = "#fff";
+            toast.style.color = "#000";
+            toast.style.padding = "15px 25px";
+            toast.style.borderRadius = "8px";
+            toast.style.boxShadow = "0 10px 30px rgba(0,0,0,0.5)";
+            toast.style.fontWeight = "bold";
+            toast.style.fontFamily = "'Space Grotesk', sans-serif";
+            toast.style.zIndex = "9999";
+            toast.style.animation = "slideIn 0.3s ease";
+
+            document.body.appendChild(toast);
+
+            // Remove after 4 seconds
+            setTimeout(() => {
+                toast.style.opacity = "0";
+                setTimeout(() => toast.remove(), 500);
+            }, 4000);
+        }
+
+        // Add CSS animation for toast
+        const style = document.createElement('style');
+        style.innerHTML = `
+            @keyframes slideIn {
+                from { transform: translateX(100%); opacity: 0; }
+                to { transform: translateX(0); opacity: 1; }
+            }
+        `;
+        document.head.appendChild(style);
+    </script>
 </body>
 </html>
