feat: Full fleet deployment - all 5 surfaces with shared CSS engine

--- a/public/beta/index.html
+++ b/public/beta/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VERTIKAL | Investors</title>
+    <title>VERTIKAL | Beta</title>
     <style>
 /* --- GLOBAL CINEMATIC ENGINE --- */
 :root {
@@ -93,61 +93,76 @@ nav {
 <body>
 
 <nav>
-    <div class="logo">VERTIKAL <span style="color:#00C853">// CAPITAL</span></div>
+    <div class="logo">VERTIKAL <span style="color:#FFD700">// BETA</span></div>
     <div class="nav-links">
         <a href="../index.html">Main</a>
-        <a href="#" style="color:#00C853;">Request Deck</a>
     </div>
 </nav>
 
-<section class="container" style="padding-top: 8rem;">
-    <div style="color: #00C853; letter-spacing: 0.2em; margin-bottom: 1rem; font-weight: 700;">INVESTMENT THESIS</div>
-    <h1 class="hero-text">CAPITALIZING ON<br>THE CULTURE.</h1>
-    <p><strong>The Core Problem:</strong> Major platforms extract value from Black creators without offering ownership. Creators drive trends; platforms keep equity.</p>
-    <p><strong>The Vertikal Solution:</strong> A closed-loop media economy where IP is retained, monetization is transparent, and the platform is the cultural asset.</p>
-</section>
-
-<section>
-    <div class="container">
-        <h2>MARKET OPPORTUNITY</h2>
-        <div class="grid grid-2">
-            <div>
-                <h3>Timing</h3>
-                <p>"Clip Fatigue" is real. Audiences want stories. We own the <strong>2–10 minute cinematic window.</strong></p>
-            </div>
-            <div>
-                <h3>Leverage</h3>
-                <p>Black culture is the #1 export of the internet. Vertikal financializes this influence.</p>
-            </div>
-            <div>
-                <h3>Moat</h3>
-                <p>The <strong>V Badge</strong> system creates a defensible layer of quality advertisers cannot find elsewhere.</p>
-            </div>
-        </div>
+<section class="container" style="text-align: center; padding-top: 8rem;">
+    <div class="badge-icon b-gold" style="margin: 0 auto 2rem auto; width: 80px; height: 80px; font-size: 2rem;">V</div>
+    <h1 class="hero-text">INSIDE THE ENGINE.</h1>
+    <p style="margin: 0 auto 2rem auto;">You are standing on the ground floor. This is not just a test; this is a preview of the operating system for Black ownership.</p>
+    <div>
+        <a href="#" class="btn btn-primary">Download Demo (TestFlight)</a>
+        <a href="#" class="btn" style="border-color: #333;">Join Waitlist</a>
     </div>
 </section>
 
 <section>
     <div class="container">
-        <h2>3-PHASE ROADMAP</h2>
-        <ul style="list-style: none; border-left: 2px solid #333; padding-left: 2rem;">
-            <li style="margin-bottom: 2rem;">
-                <strong style="color: #fff; display: block; margin-bottom: 0.5rem;">PHASE 1: FOUNDATION (CURRENT)</strong>
-                Launch Beta. Seed V Badge creators. Establish Alpha Visual Artists.
+        <h2>THE FOUNDING CLASS</h2>
+        <p>The V Badge recognizes real contribution, not clout. <strong>These are the architects.</strong></p>
+        
+        <div class="grid grid-4">
+            <div class="badge-card">
+                <div class="badge-icon b-gold">V</div>
+                <h3>The Founding 50</h3>
+                <p style="font-size: 0.8rem;">Visionaries & Strategy. Capped at 50.</p>
+            </div>
+            <div class="badge-card">
+                <div class="badge-icon b-green">V</div>
+                <h3>The Investors</h3>
+                <p style="font-size: 0.8rem;">Capital Partners powering the ecosystem.</p>
+            </div>
+            <div class="badge-card">
+                <div class="badge-icon b-blue">V</div>
+                <h3>The Builders</h3>
+                <p style="font-size: 0.8rem;">Engineers, Ops & Infrastructure Leads.</p>
+            </div>
+            <div class="badge-card">
+                <div class="badge-icon b-titanium">V</div>
+                <h3>The Networks</h3>
+                <p style="font-size: 0.8rem;">Studios & Production Partners.</p>
+            </div>
+        </div>
+        
+        <p style="margin-top: 2rem; text-align: center; font-size: 0.8rem; opacity: 0.7;">
+            <em>These badges are permanent. As we scale, they remain the symbol of those who were here before the hype.</em>
+        </p>
+    </div>
+</section>
+
+<section style="background: #080808;">
+    <div class="container">
+        <h2>WHAT'S LIVE NOW</h2>
+        <ul style="list-style: none;">
+            <li style="margin-bottom: 1.5rem; display: flex; align-items: center;">
+                <span style="color: #00C853; margin-right: 1rem;">●</span> 
+                <strong>The Cinematic Feed:</strong> High-fidelity, full-screen storytelling.
             </li>
-            <li style="margin-bottom: 2rem;">
-                <strong style="color: #fff; display: block; margin-bottom: 0.5rem;">PHASE 2: EXPANSION</strong>
-                Roll out Vertikal Studios Originals. Activate Brand Sponsorship tier.
+            <li style="margin-bottom: 1.5rem; display: flex; align-items: center;">
+                <span style="color: #00C853; margin-right: 1rem;">●</span> 
+                <strong>V Badge Verification:</strong> The filter for premium quality.
             </li>
-            <li>
-                <strong style="color: #fff; display: block; margin-bottom: 0.5rem;">PHASE 3: SCALE</strong>
-                Licensing deals for top IP. Global expansion. Series A institutional round.
+            <li style="margin-bottom: 1.5rem; display: flex; align-items: center;">
+                <span style="color: #FFD700; margin-right: 1rem;">●</span> 
+                <strong>Studio Tools (Coming Soon):</strong> In-app editing for episodic series.
             </li>
         </ul>
-        <br><br>
-        <a href="#" class="btn btn-primary">Contact Investor Relations</a>
     </div>
 </section>
 
 </body>
 </html>
+
