--- a/public/creators/index.html
+++ b/public/creators/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VERTIKAL | Investors</title>
+    <title>VERTIKAL | Creators</title>
     <style>
 /* --- GLOBAL CINEMATIC ENGINE --- */
 :root {
@@ -93,61 +93,77 @@ nav {
 <body>
 
 <nav>
-    <div class="logo">VERTIKAL <span style="color:#00C853">// CAPITAL</span></div>
+    <div class="logo">VERTIKAL <span style="color:#888">// CREATORS</span></div>
     <div class="nav-links">
         <a href="../index.html">Main</a>
-        <a href="#" style="color:#00C853;">Request Deck</a>
+        <a href="../beta/index.html" class="active">Apply for Badge</a>
     </div>
 </nav>
 
 <section class="container" style="padding-top: 8rem;">
-    <div style="color: #00C853; letter-spacing: 0.2em; margin-bottom: 1rem; font-weight: 700;">INVESTMENT THESIS</div>
-    <h1 class="hero-text">CAPITALIZING ON<br>THE CULTURE.</h1>
-    <p><strong>The Core Problem:</strong> Major platforms extract value from Black creators without offering ownership. Creators drive trends; platforms keep equity.</p>
-    <p><strong>The Vertikal Solution:</strong> A closed-loop media economy where IP is retained, monetization is transparent, and the platform is the cultural asset.</p>
+    <h1>BUILD FRANCHISES.<br>NOT JUST FOLLOWERS.</h1>
+    <p>We are looking for Storytellers, Filmmakers, and Architects. If you can build a world in vertical format (2-10 mins), you belong here.</p>
 </section>
 
 <section>
     <div class="container">
-        <h2>MARKET OPPORTUNITY</h2>
-        <div class="grid grid-2">
-            <div>
-                <h3>Timing</h3>
-                <p>"Clip Fatigue" is real. Audiences want stories. We own the <strong>2–10 minute cinematic window.</strong></p>
-            </div>
-            <div>
-                <h3>Leverage</h3>
-                <p>Black culture is the #1 export of the internet. Vertikal financializes this influence.</p>
-            </div>
-            <div>
-                <h3>Moat</h3>
-                <p>The <strong>V Badge</strong> system creates a defensible layer of quality advertisers cannot find elsewhere.</p>
-            </div>
-        </div>
+        <h2>REAL ECONOMICS</h2>
+        <p>We value retention over virality. A loyal audience of 10k is worth more than a passive audience of 1M. <strong>Real numbers for V Badge holders:</strong></p>
+        
+        <table>
+            <thead>
+                <tr>
+                    <th>Creator Stage</th>
+                    <th>Engagement</th>
+                    <th>Sources</th>
+                    <th>Est. Monthly Revenue</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td><strong>Emerging</strong></td>
+                    <td>10k Loyal Viewers</td>
+                    <td>Ad Share + Tipping</td>
+                    <td class="money">$2,000 – $5,000</td>
+                </tr>
+                <tr>
+                    <td><strong>Established</strong></td>
+                    <td>50k Loyal Viewers</td>
+                    <td>Ads + Brand Deals</td>
+                    <td class="money">$10,000 – $25,000</td>
+                </tr>
+                <tr>
+                    <td><strong>Franchise</strong></td>
+                    <td>100k+ Viewers</td>
+                    <td>Licensing + Merch</td>
+                    <td class="money">$100k+ / Year</td>
+                </tr>
+            </tbody>
+        </table>
+        <p style="margin-top: 1rem; font-size: 0.9rem;">*Figures based on high-CPM programmatic advertising + direct brand sponsorship tiers.</p>
     </div>
 </section>
 
 <section>
     <div class="container">
-        <h2>3-PHASE ROADMAP</h2>
-        <ul style="list-style: none; border-left: 2px solid #333; padding-left: 2rem;">
-            <li style="margin-bottom: 2rem;">
-                <strong style="color: #fff; display: block; margin-bottom: 0.5rem;">PHASE 1: FOUNDATION (CURRENT)</strong>
-                Launch Beta. Seed V Badge creators. Establish Alpha Visual Artists.
-            </li>
-            <li style="margin-bottom: 2rem;">
-                <strong style="color: #fff; display: block; margin-bottom: 0.5rem;">PHASE 2: EXPANSION</strong>
-                Roll out Vertikal Studios Originals. Activate Brand Sponsorship tier.
-            </li>
-            <li>
-                <strong style="color: #fff; display: block; margin-bottom: 0.5rem;">PHASE 3: SCALE</strong>
-                Licensing deals for top IP. Global expansion. Series A institutional round.
-            </li>
-        </ul>
+        <h2>HOW TO EARN THE BADGE</h2>
+        <div class="grid grid-2">
+            <div class="badge-card">
+                <div class="badge-icon b-titanium">1</div>
+                <h3>Submit Pilot</h3>
+                <p>Upload a 2-minute cinematic pilot to the Beta portal.</p>
+            </div>
+            <div class="badge-card">
+                <div class="badge-icon b-titanium">2</div>
+                <h3>Verify IP</h3>
+                <p>Prove ownership of your content. No rips. No reposts.</p>
+            </div>
+        </div>
         <br><br>
-        <a href="#" class="btn btn-primary">Contact Investor Relations</a>
+        <a href="../beta/index.html" class="btn btn-primary">Start Application</a>
     </div>
 </section>
 
 </body>
 </html>
+
