--- a/public/networks/index.html
+++ b/public/networks/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>VERTIKAL | Investors</title>
+    <title>VERTIKAL | Networks</title>
     <style>
 /* --- GLOBAL CINEMATIC ENGINE --- */
 :root {
@@ -93,35 +93,37 @@ nav {
 <body>
 
 <nav>
-    <div class="logo">VERTIKAL <span style="color:#00C853">// CAPITAL</span></div>
+    <div class="logo">VERTIKAL <span style="color:#888">// NETWORKS</span></div>
     <div class="nav-links">
         <a href="../index.html">Main</a>
-        <a href="#" style="color:#00C853;">Request Deck</a>
+        <a href="../investors/index.html">Investors</a>
     </div>
 </nav>
 
 <section class="container" style="padding-top: 8rem;">
-    <div style="color: #00C853; letter-spacing: 0.2em; margin-bottom: 1rem; font-weight: 700;">INVESTMENT THESIS</div>
-    <h1 class="hero-text">CAPITALIZING ON<br>THE CULTURE.</h1>
-    <p><strong>The Core Problem:</strong> Major platforms extract value from Black creators without offering ownership. Creators drive trends; platforms keep equity.</p>
-    <p><strong>The Vertikal Solution:</strong> A closed-loop media economy where IP is retained, monetization is transparent, and the platform is the cultural asset.</p>
+    <h1 class="hero-text">MEDIA INFRASTRUCTURE.<br>NOT JUST PLAYLISTS.</h1>
+    <p>Vertikal is a multi-divisional ecosystem designed to incubate, scale, and monetize Black IP. We are building the "Netflix of Mobile."</p>
 </section>
 
 <section>
     <div class="container">
-        <h2>MARKET OPPORTUNITY</h2>
+        <h2>THE DIVISIONS</h2>
         <div class="grid grid-2">
-            <div>
-                <h3>Timing</h3>
-                <p>"Clip Fatigue" is real. Audiences want stories. We own the <strong>2–10 minute cinematic window.</strong></p>
+            <div class="badge-card" style="border-left: 4px solid #777;">
+                <h3 style="color:#fff;">Vertikal Studios</h3>
+                <p>Internal production house. Flagship originals. Exclusive docu-series that set the platform tone.</p>
             </div>
-            <div>
-                <h3>Leverage</h3>
-                <p>Black culture is the #1 export of the internet. Vertikal financializes this influence.</p>
+            <div class="badge-card" style="border-left: 4px solid #777;">
+                <h3 style="color:#fff;">Alpha Visual Artists</h3>
+                <p>The vanguard. High-art, experimental, music visualization, and boundary-pushing motion design.</p>
             </div>
-            <div>
-                <h3>Moat</h3>
-                <p>The <strong>V Badge</strong> system creates a defensible layer of quality advertisers cannot find elsewhere.</p>
+            <div class="badge-card" style="border-left: 4px solid #777;">
+                <h3 style="color:#fff;">Vertikal Networks</h3>
+                <p>Distribution hub. Managing syndication to FAST channels and SVOD licensing while retaining ownership.</p>
+            </div>
+            <div class="badge-card" style="border-left: 4px solid #777;">
+                <h3 style="color:#fff;">Vertikal Creators</h3>
+                <p>Talent incubation. From "user" to "partner." Educational pathways and resource deployment.</p>
             </div>
         </div>
     </div>
@@ -129,25 +131,12 @@ nav {
 
 <section>
     <div class="container">
-        <h2>3-PHASE ROADMAP</h2>
-        <ul style="list-style: none; border-left: 2px solid #333; padding-left: 2rem;">
-            <li style="margin-bottom: 2rem;">
-                <strong style="color: #fff; display: block; margin-bottom: 0.5rem;">PHASE 1: FOUNDATION (CURRENT)</strong>
-                Launch Beta. Seed V Badge creators. Establish Alpha Visual Artists.
-            </li>
-            <li style="margin-bottom: 2rem;">
-                <strong style="color: #fff; display: block; margin-bottom: 0.5rem;">PHASE 2: EXPANSION</strong>
-                Roll out Vertikal Studios Originals. Activate Brand Sponsorship tier.
-            </li>
-            <li>
-                <strong style="color: #fff; display: block; margin-bottom: 0.5rem;">PHASE 3: SCALE</strong>
-                Licensing deals for top IP. Global expansion. Series A institutional round.
-            </li>
-        </ul>
-        <br><br>
-        <a href="#" class="btn btn-primary">Contact Investor Relations</a>
+        <h2>WHY THIS WINS</h2>
+        <p><strong>The Flywheel:</strong> Content → Distribution → Community → Monetization → Reinforcement.</p>
+        <p>We treat Networks as incubators. We test formats cheaply. Winners get spun into larger deals. Losers get cut fast. This is operational discipline.</p>
     </div>
 </section>
 
 </body>
 </html>
+
