Fix all landing pages with correct content: STOP ROTATING YOUR PHONE hero, PRE-SEED tiers, Founding 50 Networks form, FOR DIRECTORS headline

--- a/public/creators/index.html
+++ b/public/creators/index.html
@@ -101,8 +101,8 @@ nav {
 </nav>
 
 <section class="container" style="padding-top: 8rem;">
-    <h1>BUILD FRANCHISES.<br>NOT JUST FOLLOWERS.</h1>
-    <p>We are looking for Storytellers, Filmmakers, and Architects. If you can build a world in vertical format (2-10 mins), you belong here.</p>
+    <h1 class="hero-text">FOR DIRECTORS.<br>NOT INFLUENCERS.</h1>
+    <p style="color: #fff; font-size: 1.2rem;">We are looking for Storytellers, Filmmakers, and Architects. If you can build a world in vertical format (2-10 mins), you belong here.</p>
 </section>
 
 <section>
