--- a/public/beta/index.html
+++ b/public/beta/index.html
@@ -50,6 +50,9 @@
     .logo { font-weight: 900; letter-spacing: 0.1em; }
     .nav-links a { margin-left: 2rem; color: var(--muted); text-decoration: none; text-transform: uppercase; font-size: 0.85rem; letter-spacing: 0.05em; }
     .nav-links a:hover { color: #fff; }
+    
+    /* SMOOTH SCROLL */
+    html { scroll-behavior: smooth; }
     </style>
 </head>
 <body>
@@ -63,7 +66,7 @@
     <section class="container" style="text-align: center; padding-top: 8rem;">
         <h1 class="hero-text">INSIDE THE ENGINE.</h1>
         <p style="margin: 0 auto 2rem auto;">You are standing on the ground floor. This is a preview of the operating system for Black ownership.</p>
-        <a href="#" class="btn" style="background: #fff; color: #000;">Download Demo (TestFlight)</a>
+        <a href="mailto:beta@vertikalapp.com?subject=TestFlight%20Access" class="btn" style="background: #fff; color: #000;">Download Demo (TestFlight)</a>
     </section>
 
     <section>
