--- a/public/creators/index.html
+++ b/public/creators/index.html
@@ -55,6 +55,9 @@
     table { width: 100%; border-collapse: collapse; margin-top: 1rem; }
     th, td { text-align: left; padding: 1rem; border-bottom: 1px solid var(--border); }
     th { color: var(--muted); text-transform: uppercase; font-size: 0.85rem; }
+    
+    /* SMOOTH SCROLL */
+    html { scroll-behavior: smooth; }
     </style>
 </head>
 <body>
