--- a/public/index.html
+++ b/public/index.html
@@ -50,6 +50,9 @@
     .logo { font-weight: 900; letter-spacing: 0.1em; }
     .nav-links a { margin-left: 2rem; color: var(--muted); text-decoration: none; text-transform: uppercase; font-size: 0.85rem; letter-spacing: 0.05em; }
     .nav-links a:hover { color: #fff; }
+    
+    /* SMOOTH SCROLL */
+    html { scroll-behavior: smooth; }
     </style>
 </head>
 <body>
