--- a/public/networks/index.html
+++ b/public/networks/index.html
@@ -50,6 +50,9 @@
     .logo { font-weight: 900; letter-spacing: 0.1em; }
     .nav-links a { margin-left: 2rem; color: var(--muted); text-decoration: none; text-transform: uppercase; font-size: 0.85rem; letter-spacing: 0.05em; }
     .nav-links a:hover { color: #fff; }
+    
+    /* SMOOTH SCROLL */
+    html { scroll-behavior: smooth; }
     </style>
 </head>
 <body>
@@ -57,6 +60,7 @@
         <div class="logo">VERTIKAL <span style="color:#888">// NETWORKS</span></div>
         <div class="nav-links">
             <a href="../index.html">Main</a>
+            <a href="../creators/index.html">Creators</a>
             <a href="../investors/index.html">Investors</a>
         </div>
     </nav>
