Fix creators page: Add 'FOR DIRECTORS. NOT INFLUENCERS.' headline

--- a/public/creators/index.html
+++ b/public/creators/index.html
@@ -70,7 +70,7 @@
     </nav>
 
     <section class="container" style="padding-top: 8rem;">
-        <p style="color: #FFD700; letter-spacing: 0.2em; font-weight: 700;">THE CANVAS HAS CHANGED</p>
+        <p style="color: #FFD700; letter-spacing: 0.2em; font-weight: 700; text-transform: uppercase;">FOR DIRECTORS. NOT INFLUENCERS.</p>
         <h1 class="hero-text">BUILD FRANCHISES.<br><span>NOT JUST FOLLOWERS.</span></h1>
         <p>We are looking for Storytellers, Filmmakers, and Architects. If you can build a world in 2-10 minutes, you belong here.</p>
     </section>
